[package]
name = "moonbase_online"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A modern Rust reimplementation of the classic 1990s DOS game Moonbase"

[dependencies]
bevy = { version = "0.12", features = ["default"] }
bevy_egui = "0.24"  # For retro-style UI elements
egui = "0.24"       # UI framework
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

[dev-dependencies]
criterion = "0.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
